--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 tasks:
-  - before: npm i -g npm && 
-            npm install --@zowe:registry=https://registry.npmjs.org --no-package-lock --force
+  - before: npm set registry https://registry.npmjs.org &&
+            npm i -g npm &&
+            npm i . 
     init: npm i -g @zowe/cli
           zowe plugins install @zowe/zos-ftp-for-zowe-cli &&
           zowe plugins install @broadcom/endevor-bridge-for-git-for-zowe-cli &&
